[package]
name = "static-encrypt-cli"
version = "0.1.0"
description = "Encrypt any static content. This is a CLI companion for the static-encrypt frontend."
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.21.7"
clap = { version = "4.5.1", features = ["derive"] }
hmac = "0.12.1"
pbkdf2 = { version = "0.12.2", default-features = false }
rand_core = "0.6.4"
sha2 = "0.10.8"

# Optimize the release build for minimum binary size:
# https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
